resolve links of the other pages test

--- a/components/comingSoon.html
+++ b/components/comingSoon.html
@@ -5,17 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Coming Soon | SARA</title>
     
-    <link rel="stylesheet" href="/components/componentHeader.css">
-    <link rel="stylesheet" href="/components/componentFooter.css">
-    <link rel="stylesheet" href="/components/comingSoon.css">
+    <link rel="stylesheet" href="./components/componentHeader.css">
+    <link rel="stylesheet" href="./components/componentFooter.css">
+    <link rel="stylesheet" href="./components/comingSoon.css">
 
-    <script type="module" src="/JavaScript/loaderComponent.js" defer></script>
+    <script type="module" src="./JavaScript/loaderComponent.js" defer></script>
 </head>
 <body>
 
 <section>
     <div class="coming">
-    <img class="comingIMG" src="/MultiMedia/comingsoon1.jpg" alt="">
+    <img class="comingIMG" src="./MultiMedia/comingsoon1.jpg" alt="">
    </div>
     <h1 class="title">Coming soon...</h1>
    </div>
