--- a/components/componentHeader.html
+++ b/components/componentHeader.html
@@ -10,12 +10,12 @@
     />
     <!--Google icon-->
     <title>Header</title>
-    <link rel="stylesheet" href="/components/componentHeader.css">
+    <link rel="stylesheet" href="./components/componentHeader.css">
 
-    <script src="/JavaScript/mobileMenu.js" defer></script>
-    <script type="module" src="/JavaScript/renderProducts.js" defer></script>
-    <script type="module" src="/JavaScript/main.js" defer></script>
-    <script type="module" src="/JavaScript/cartCounter.js" defer></script>
+    <script src="./JavaScript/mobileMenu.js" defer></script>
+    <script type="module" src="./JavaScript/renderProducts.js" defer></script>
+    <script type="module" src="./JavaScript/main.js" defer></script>
+    <script type="module" src="./JavaScript/cartCounter.js" defer></script>
 
 </head>
 <body>
@@ -24,33 +24,33 @@
 
       <nav class="navbar">
         <!--Logo-->
-        <a href="/HTML/index.html" class="logo"> <h1>SARA</h1></a>
+        <a href="index.html" class="logo"> <h1>SARA</h1></a>
 
         <div class="menu" id="menu">
           <ul class="menuList">
             <li>
-              <a href="/HTML/dresses.html" class="productmenu"><span>Dresses</span></a></li>
+              <a href="dresses.html" class="productmenu"><span>Dresses</span></a></li>
             <li>
-              <a href="/HTML/jeans.html" class="productmenu"><span>Jeans</span></a></li>
+              <a href="jeans.html" class="productmenu"><span>Jeans</span></a></li>
             <li>
-              <a href="/HTML/shoes.html" class="productmenu"><span>Shoes</span></a></li>
+              <a href="shoes.html" class="productmenu"><span>Shoes</span></a></li>
             <li>
-              <a href="/HTML/jewellery.html" class="productmenu"><span>Jewellery</span></a></li>
+              <a href="jewellery.html" class="productmenu"><span>Jewellery</span></a></li>
             <li>
-              <a href="/HTML/coats.html" class="productmenu"><span>Coats</span></a></li>
+              <a href="coats.html" class="productmenu"><span>Coats</span></a></li>
             <li>
-              <a href="/HTML/bags.html" class="productmenu"><span>Bags</span></a></li>
+              <a href="bags.html" class="productmenu"><span>Bags</span></a></li>
           </ul>
         </div>
 
         <div class="nav-right">
           <!--SearchBar-->
           <input class="search" type="search" placeholder="search a product..." />
-          <img src="/MultiMedia/searchIcon.png" alt="search icon" class="searchIcon">
+          <img src="./MultiMedia/searchIcon.png" alt="search icon" class="searchIcon">
 
           <!--Basket-->
 <div class="shopping-cart">
-   <a href="/HTML/cart.html">
+   <a href="cart.html">
        <!-- Icon du panier -->
        <span class="material-symbols-outlined cart-icon" id="cart-icon">shopping_cart</span>
    </a>       
@@ -60,7 +60,7 @@
 
 
           <!--Account-->
-          <a href="/HTML/account.html"><span class="material-symbols-outlined">person</span></a>
+          <a href="account.html"><span class="material-symbols-outlined">person</span></a>
 
           <div class="lines" id="lines">
            <div class="line1" id="line1"></div>
