--- a/components/payment.html
+++ b/components/payment.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>checkout</title>
-    <link rel="stylesheet" href="/components/payment.css">
+    <link rel="stylesheet" href="./components/payment.css">
 </head>
 <body>
           <section class="payment" id="payment">
@@ -22,7 +22,7 @@
             <input type="text" name="address" id="address" placeholder="123 Maple St, Suite 4, New York, NY 10001, USA">
           
             <h3 class="cardTitle">Card Information</h3>
-            <img src="/MultiMedia/paymentIconsjpg.jpg" alt="Payment icons" class="payIcons">
+            <img src="./MultiMedia/paymentIconsjpg.jpg" alt="Payment icons" class="payIcons">
 
             <input type="text" name="CardNumber" id="cardNumb" placeholder="5555 5555 5555 4444">
            
