--- a/components/componentFooter.html
+++ b/components/componentFooter.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FOOTER</title>
-    <link rel="stylesheet" href="/components/componentFooter.css">
+    <link rel="stylesheet" href="./components/componentFooter.css">
 </head>
 <body>
     <footer>
@@ -54,10 +54,10 @@
         <div class="social">
             <h3 class="follow">Follow us!</h3>
             <div>
-                <img src="/MultiMedia/facebook.png" class="fIcons" alt="facebook Icon">
-                <img src="/MultiMedia/instagram.png" class="fIcons" alt="facebook Icon">
-                <img src="/MultiMedia/youtube.png" class="fIcons" alt="facebook Icon">
-                <img src="/MultiMedia/linkedin.png" class="fIcons linked" alt="facebook Icon">
+                <img src="./MultiMedia/facebook.png" class="fIcons" alt="facebook Icon">
+                <img src="./MultiMedia/instagram.png" class="fIcons" alt="facebook Icon">
+                <img src="./MultiMedia/youtube.png" class="fIcons" alt="facebook Icon">
+                <img src="./MultiMedia/linkedin.png" class="fIcons linked" alt="facebook Icon">
             </div>
         </div><hr>
          <div class="allRights">
