Add dynam footer on home page

--- a/components/componentHeader.html
+++ b/components/componentHeader.html
@@ -9,6 +9,7 @@
       rel="stylesheet"
     />
     <!--Google icon-->
+
     <title>Header</title>
     <link rel="stylesheet" href="./components/componentHeader.css">
 
@@ -45,7 +46,7 @@
 
         <div class="nav-right">
           <!--SearchBar-->
-          <input class="search" type="search" placeholder="search a product..." />
+          <input class="search" type="search" id="search-input" placeholder="search a product..." autocomplete="off"/>
           <img src="./MultiMedia/searchIcon.png" alt="search icon" class="searchIcon">
 
           <!--Basket-->
